fix overflow-x on moblie

--- a/server/public/style.css
+++ b/server/public/style.css
@@ -4,9 +4,11 @@
     width: 40%;
     border-radius: 20%;
 }
-.hide-button{
+
+.hide-button {
     display: none;
 }
+
 img {
     background-size: contain;
 }
@@ -20,10 +22,6 @@ img {
 .arrow-control {
     cursor: pointer;
     pointer-events: none;
-}
-
-.overflow-control {
-    overflow: hidden;
 }
 
 .col-for-cards {
@@ -61,12 +59,21 @@ h5 {
 }
 
 html, body {
+    overflow-x: hidden;
+}
+
+body {
     max-width: 100%;
     background-color: black;
+    position: relative;
 }
 
 .overflow-x-body {
     overflow-x: hidden;
+}
+
+.overflow-control {
+    overflow: hidden;
 }
 
 .delete {
@@ -184,7 +191,6 @@ html, body {
 
 .container {
     margin-right: 20%;
-    margin-top: 20px;
 }
 
 form {
@@ -333,15 +339,11 @@ form {
         margin-top: 26%;
         margin-bottom: 9%;
     }
-    .delete-modal {
-        margin-left: -21%;
-    }
     .checkout-modal-contetent {
-        margin-top: 77%;
-        margin-left: -22%;
+        margin-top: 48%;
     }
     .nav-h {
-        width: 80%
+        width: 100%;
     }
     .contact-header {
         font-size: 40px;
@@ -378,7 +380,7 @@ form {
         margin-bottom: 23%;
     }
     .mod {
-        top: 23%;
+        top: 13%;
         left: 0%;
     }
     .plus-minus-button {
@@ -403,14 +405,8 @@ form {
     .cart {
         margin-left: 0%;
     }
-    .foot {
-        width: 97%;
-    }
     .nav-h {
-        width: 80%
-    }
-    .delete-modal {
-        margin-left: -14%;
+        width: 100%;
     }
     .cart-count {
         margin-top: 2.5%;
@@ -485,27 +481,37 @@ form {
         margin-bottom: 62%;
     }
     .mod {
+        margin-top: 20%;
         left: 2%;
     }
     .checkout-modal-contetent {
-        margin-left: -17%;
-        margin-top: 99%;
+        margin-top: 79%;
     }
 }
 
 @media only screen and (min-device-width: 375px) and (max-device-height: 667px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 2) {
     /*iphone*/
     .cart {
+        margin-top: 1%;
         font-size: 3rem;
         margin-left: 0%;
     }
+    .checkout-modal-contetent {
+        margin-top: 17%;
+    }
+    .delete-modal {
+        width: 74%;
+        margin-left: 17%;
+        margin-top: 17%;
+    }
     .nav-h {
-        width: 81%;
+        width: 100%;
+        height: 20vh;
     }
     .cart-count {
-        margin-top: 2.5%;
+        margin-top: 1.5%;
         margin-left: 2.5%;
-        font-size: 16px;
+        font-size: 24px;
     }
     .col-for-cards {
         flex: none;
@@ -528,7 +534,7 @@ form {
         font-size: 18px;
     }
     .prodet {
-        margin-top: 1%;
+        margin-top: -10%;
         width: 25vw;
         float: right;
         margin-right: 9%;
@@ -581,21 +587,19 @@ form {
         float: none;
         margin-top: 0%;
     }
-    .modal-top {
-        width: 47%;
-        margin-left: 17%;
-        margin-top: 0%;
-    }
     .continue-to-shop-button {
         font-size: 10px;
         margin-top: -5%;
     }
     .fs {
         height: 5vh;
-        font-size: 9px;
+        font-size: 15px;
+    }
+    .adjust-no-item-button {
+        margin-left: 49%;
     }
     .checkout-text-color {
-        font-size: x-small;
+        /* font-size: x-small; */
         margin-left: 14%;
         width: 57vw;
     }
@@ -603,7 +607,7 @@ form {
         margin-top: 13%;
     }
     .mod {
-        margin-top: 10%;
+        margin-top: 0%;
         margin-left: -5%;
         top: -2%;
     }
@@ -635,7 +639,7 @@ form {
         margin-left: -194%;
     }
     .nav-h {
-        width: 87%;
+        width: 101%;
     }
     .phone-link, .email-link {
         font-size: 12px;
@@ -656,10 +660,10 @@ form {
     }
     .col-for-cards {
         flex: none;
-        max-width: 83%;
+        max-width: 90%;
     }
     .no-item {
-        margin-bottom: 66%;
+        margin-bottom: 72%;
     }
     .adjust-no-item-button {
         margin-left: 30%;
@@ -668,20 +672,20 @@ form {
         height: 10vh;
     }
     .mod {
-        width: 95%;
+        width: 116%;
         top: 6px;
         left: -28px;
         margin-top: 0;
     }
     .cart {
         position: absolute;
-        margin-left: 75%;
+        margin-left: 79%;
         font-size: 3rem;
     }
     .cart-count {
         margin-left: 34%;
         position: absolute;
-        font-size: 16px;
+        font-size: 22px;
         margin-top: 27.5%;
     }
     .add-cart {
@@ -731,7 +735,7 @@ form {
     .checkout-text-color {
         margin-left: 5%;
         width: 80vw;
-        font-size: 14px;
+        font-size: 16px;
     }
     .checkout-container {
         margin-top: 19%;
@@ -740,7 +744,7 @@ form {
         border-radius: 1%;
         width: 61vw;
         margin-left: 20%;
-        margin-bottom: 33%;
+        margin-bottom: 38%;
     }
     .product-name {
         font-size: 14px;
@@ -760,8 +764,11 @@ form {
 @media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: portrait) {
     /* iphone x */
     .nav-h {
-        width: 86%;
+        width: 100%;
         height: 10vh;
+    }
+    .jumbo {
+        margin-top: 18%;
     }
     .no-item {
         margin-bottom: 66%;
@@ -813,10 +820,10 @@ form {
         height: 8.2vh;
     }
     .mod {
-        width: 99%;
+        width: 117%;
         top: 6px;
         left: -28px;
-        margin-top: 0;
+        margin-top: 2%;
     }
     .add-cart {
         text-decoration: none;
@@ -861,7 +868,7 @@ form {
     .checkout-text-color {
         margin-left: 5%;
         width: 80vw;
-        font-size: 24px;
+        font-size: 28px;
     }
     .checkout-container {
         margin-top: 33%;
@@ -870,7 +877,7 @@ form {
         border-radius: 1%;
         width: 61vw;
         margin-left: 20%;
-        margin-bottom: 70%;
+        margin-bottom: 79%;
     }
     .product-name {
         font-size: 14px;
@@ -889,16 +896,18 @@ form {
         margin-top: 83%;
     }
     .checkout-modal-contetent {
-        width: 86%;
+        width: 101%;
+        margin-top: 68%;
     }
     .delete-modal {
-        width: 86%;
+        width: 100%;
     }
 }
 
 @media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: landscape) {
     /* iphone x */
     .nav-h {
+        width: 100%;
         height: 26vh;
     }
     .cart {
@@ -937,7 +946,7 @@ form {
         font-size: 18px;
     }
     .prodet {
-        margin-top: 1%;
+        margin-top: -12%;
         width: 25vw;
         float: right;
         margin-right: 9%;
@@ -954,9 +963,9 @@ form {
         margin-top: 13%;
     }
     .place-order {
-        height: 6vh;
+        height: 8vh;
         float: right;
-        font-size: 9px;
+        font-size: 12px;
         margin-top: -1%;
     }
     .title1 {
@@ -983,7 +992,6 @@ form {
     .p2 {
         position: absolute;
         width: 59vw;
-        margin-top: -7%;
     }
     .text-color {
         margin-left: 20%;
@@ -999,15 +1007,14 @@ form {
         margin-top: 19%;
     }
     .continue-to-shop-button {
-        font-size: 10px;
-        margin-top: -5%;
+        font-size: 13px;
+        margin-top: -4%;
     }
     .fs {
         height: 5vh;
-        font-size: 9px;
+        font-size: 14px;
     }
     .checkout-text-color {
-        font-size: x-small;
         margin-left: 14%;
         width: 57vw;
     }
